# stack_fitter

./: .gitignore  CMakeLists.txt  OPTIONS  generate_stack_vlbi_data.py  gp_utils.py  inference.py  inference_dnest4.py  inference_emcee.py  plot_fit_results.py  pymc_fit.py  pymc_fit_ridges.py  pymc_nuts.py  slice_utils.py
src/: Data.cpp  Data.h  Model.cpp  Model.h  ModelCP.cpp  ModelCP.h  ModelGP.cpp  ModelGP.h  ModelGPCP.cpp  ModelGPCP.h  ModelGPLatent.cpp  ModelGPLatent.h  kernels.cpp  kernels.h  main.cpp  utils.cpp  utils.h
